# automatic_file_manager

./: LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: installation.yml
automatic_file_manager/: FilesManager.py  __init__.py  file.py  settings.json  watchdog_class.py
docs/: automatic_file_manager.md  common.md  contributing.md  index.md  installation.md  usage.md
tests/: __init__.py  test_automatic_file_manager.py
